# HTR-historical

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: web.py
app/src/: predictor.py
data/processed/: README.md
data/processed/1 For text detector/: README.md  data.yaml
data/processed/4 Segmenter test/: data.yaml
data/processed/for YOLO detector/: README.md  data.yaml
data/raw/: README.md
notebooks/: EDA raw data.ipynb  YOLO data prepare.ipynb  YOLO train.ipynb  raw annotation visualize.ipynb
notebooks/1 EDA/: 1 EDA raw data.ipynb
notebooks/1. EDA/: 2 Raw annotation visualize.ipynb
notebooks/2 TEXT DETECTOR/: 1 Data prepare.ipynb  2 Train.ipynb  3 Result visualize.ipynb
notebooks/3 TEXT RECOGNIZER/: 1 Data prepare.ipynb  2 Train OCR.ipynb
notebooks/4 PRODUCTION DATA PREPARE/: 1 Data prepare.ipynb  2 Compute metrics.ipynb
notebooks/5 COMPUTE METRICS/: Compute metrics.ipynb
notebooks/6 SEGMENTER TEST/: 1 Data prepare.ipynb  2 Train text segmenter.ipynb  3 Train OCR model.ipynb  5 SAM.ipynb
notebooks/7 FILTER OLD MARKUP/: 1 filter.ipynb
