[tool.poetry]
name = "htr-historical"
version = "0.1.0"
description = ""
authors = ["Vadim Akhmetov <golden312va@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.37.2"
clearml = "^1.16.4"
ultralytics = "^8.2.87"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
datasets = "2.17.1"
streamlit = "^1.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
